--- a/index.html
+++ b/index.html
@@ -1,181 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lightning TikTok Ads – 24‑Hour Creative</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Tally embed -->
-  <script async src="https://tally.so/widgets/embed.js"></script>
-</head>
-<body class="bg-slate-50 text-slate-800 antialiased">
-  <!-- Hero -->
-  <section class="relative overflow-hidden" id="hero">
-    <div class="absolute inset-0 bg-gradient-to-br from-indigo-500 via-purple-600 to-pink-500 opacity-10"></div>
-    <div class="relative max-w-6xl mx-auto px-6 lg:px-8 py-24 grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-      <div>
-        <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-slate-900 mb-6">
-          Lightning TikTok Ads<br />
-          <span class="text-indigo-600">delivered in&nbsp;24 hours</span>
-        </h1>
-        <p class="text-lg md:text-xl mb-8 max-w-xl">
-          AI‑powered creative that sells. From brief to viral‑ready video in a single day, starting at just <span class="font-semibold">£199</span>.
-        </p>
-        <a href="#brief" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-4 px-8 rounded-2xl shadow-lg transition">
-          Get Started →
-        </a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lightning TikTok Ads – 24‑Hour Creative</title>
+    <!-- Tailwind CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-slate-50 text-slate-800 antialiased">
+    <!-- Hero -->
+    <section class="relative overflow-hidden">
+      <div class="absolute inset-0 bg-gradient-to-br from-indigo-500 via-purple-600 to-pink-500 opacity-10"></div>
+      <div class="relative max-w-6xl mx-auto px-6 lg:px-8 py-24 grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+        <div>
+          <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-slate-900 mb-6">
+            Lightning TikTok Ads<br />
+            <span class="text-indigo-600">delivered in&nbsp;24 hours</span>
+          </h1>
+          <p class="text-lg md:text-xl mb-8 max-w-xl">
+            AI‑powered creative that sells. From brief to viral‑ready video in a single day, starting at just <span class="font-semibold">£199</span>.
+          </p>
+          <a href="#brief" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-4 px-8 rounded-2xl shadow-lg transition">
+            Get Started →
+          </a>
+        </div>
+        <div class="lg:pl-12 flex justify-center lg:justify-end">
+          <img src="/assets/phone-mock.png" alt="TikTok ad preview" class="w-72 md:w-96 rounded-2xl shadow-2xl" />
+        </div>
       </div>
-      <div class="lg:pl-12 flex justify-center lg:justify-end">
-        <img src="/assets/phone-mock.png" alt="TikTok ad preview" class="w-72 md:w-96 rounded-2xl shadow-2xl" />
+    </section>
+
+    <!-- Packages -->
+    <section id="packages" class="py-24 bg-white">
+      <div class="max-w-6xl mx-auto px-6 lg:px-8">
+        <h2 class="text-3xl md:text-4xl font-bold text-center mb-16">
+          Simple, transparent pricing
+        </h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+          <!-- Spark -->
+          <div class="border rounded-2xl p-8 shadow-sm hover:shadow-lg transition">
+            <h3 class="text-2xl font-semibold mb-4">Spark</h3>
+            <p class="mb-6 text-lg">3 scroll‑stopping ads. Delivery in 24 h.</p>
+            <p class="text-5xl font-extrabold mb-6">£199</p>
+            <ul class="space-y-3 mb-8 list-disc list-inside">
+              <li>3× 9‑15 s videos (1080 p)</li>
+              <li>Captions & trending hashtags</li>
+              <li>Commercial rights included</li>
+            </ul>
+            <a href="#brief" class="block text-center bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-3 rounded-xl shadow transition">Choose Spark</a>
+          </div>
+          <!-- Turbo -->
+          <div class="border-4 border-indigo-600 rounded-2xl p-8 shadow-md hover:shadow-xl transition transform lg:-translate-y-4">
+            <h3 class="text-2xl font-semibold mb-4">Turbo</h3>
+            <p class="mb-6 text-lg">10 ads + A/B variants & ad‑boost setup.</p>
+            <p class="text-5xl font-extrabold mb-6">£399</p>
+            <ul class="space-y-3 mb-8 list-disc list-inside">
+              <li>10× 9‑15 s videos</li>
+              <li>Human voice‑over & SRT captions</li>
+              <li>1 ad pushed to TikTok Spark Ads</li>
+              <li>Performance dashboard</li>
+            </ul>
+            <a href="#brief" class="block text-center bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-3 rounded-xl shadow transition">Choose Turbo</a>
+          </div>
+          <!-- Infinity -->
+          <div class="border rounded-2xl p-8 shadow-sm hover:shadow-lg transition">
+            <h3 class="text-2xl font-semibold mb-4">Infinity</h3>
+            <p class="mb-6 text-lg">Always‑on content engine.</p>
+            <p class="text-5xl font-extrabold mb-6">£995<span class="text-xl font-medium">/mo</span></p>
+            <ul class="space-y-3 mb-8 list-disc list-inside">
+              <li>30 ads per month</li>
+              <li>Trend monitoring & weekly reports</li>
+              <li>Dedicated Slack channel</li>
+              <li>Priority 12 h turnaround</li>
+            </ul>
+            <a href="#brief" class="block text-center bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-3 rounded-xl shadow transition">Start Subscription</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Image uploader + Tally form -->
-  <section id="brief" class="py-24 bg-slate-100">
-    <div class="max-w-5xl mx-auto px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold text-center mb-10">Upload up to 5 reference images</h2>
-
-      <!-- Upload control -->
-      <div class="mb-12">
-        <input id="fileInput" type="file" accept="image/*" multiple class="hidden" />
-        <label for="fileInput" class="flex flex-col items-center justify-center w-full h-48 border-2 border-dashed border-indigo-400 rounded-2xl cursor-pointer hover:bg-indigo-50 transition text-indigo-600 font-semibold">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mb-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16v4a2 2 0 002 2h6a2 2 0 002-2v-4m-4-4V4m0 0l-3 3m3-3l3 3" />
-          </svg>
-          <span>Drag & drop or click to upload (max 5)</span>
-        </label>
+    <!-- Brief form embed -->
+    <section id="brief" class="py-24 bg-slate-100">
+      <div class="max-w-4xl mx-auto px-6 lg:px-8 text-center">
+        <h2 class="text-3xl md:text-4xl font-bold mb-10">Submit your brief in 3 minutes</h2>
+        <!-- Tally form iframe; replace with your live share link -->
+        <iframe src="https://tally.so/r/REPLACE_WITH_YOUR_FORM_ID?hideTitle=1&transparentBackground=1" class="w-full h-[650px] rounded-xl shadow-lg" frameborder="0" allow="camera; microphone; autoplay; encrypted-media;"></iframe>
+        <p class="text-sm text-slate-500 mt-4">We start work the moment you hit submit. Expect first drafts in your inbox within 12 hours.</p>
       </div>
+    </section>
 
-      <!-- Preview grid -->
-      <div id="previewGrid" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3"></div>
-
-      <!-- Launch Tally button -->
-      <div class="text-center mt-12">
-        <button id="openForm" class="bg-indigo-600 disabled:bg-indigo-300 text-white font-semibold py-3 px-8 rounded-xl shadow-lg transition" disabled>
-          Open Brief Form →
-        </button>
+    <!-- Footer -->
+    <footer class="bg-slate-900 text-slate-300 py-12">
+      <div class="max-w-6xl mx-auto px-6 lg:px-8 grid grid-cols-1 md:grid-cols-3 gap-8">
+        <div>
+          <h4 class="text-lg font-semibold mb-4 text-white">Lightning TikTok Ads</h4>
+          <p class="text-sm leading-relaxed">AI‑native micro‑agency creating high‑performance social video in record time.</p>
+        </div>
+        <div>
+          <h4 class="text-lg font-semibold mb-4 text-white">Contact</h4>
+          <p class="text-sm">hello@lightningads.uk</p>
+          <p class="text-sm">+44 (0)20 8089 1234</p>
+        </div>
+        <div>
+          <h4 class="text-lg font-semibold mb-4 text-white">Follow</h4>
+          <ul class="space-y-2 text-sm">
+            <li><a href="#" class="hover:text-white transition">TikTok</a></li>
+            <li><a href="#" class="hover:text-white transition">Instagram</a></li>
+            <li><a href="#" class="hover:text-white transition">LinkedIn</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </section>
+      <div class="mt-8 text-center text-xs text-slate-500">© <span id="year"></span> Lightning Ads Ltd. All rights reserved.</div>
+    </footer>
 
-  <!-- Footer (unchanged) -->
-  <footer class="bg-slate-900 text-slate-300 py-12">
-    <div class="max-w-6xl mx-auto px-6 lg:px-8 grid grid-cols-1 md:grid-cols-3 gap-8">
-      <!-- content unchanged -->
-      <div>
-        <h4 class="text-lg font-semibold mb-4 text-white">Lightning TikTok Ads</h4>
-        <p class="text-sm leading-relaxed">AI‑native micro‑agency creating high‑performance social video in record time.</p>
-      </div>
-      <div>
-        <h4 class="text-lg font-semibold mb-4 text-white">Contact</h4>
-        <p class="text-sm">hello@lightningads.uk</p>
-        <p class="text-sm">+44 (0)20 8089 1234</p>
-      </div>
-      <div>
-        <h4 class="text-lg font-semibold mb-4 text-white">Follow</h4>
-        <ul class="space-y-2 text-sm">
-          <li><a href="#" class="hover:text-white transition">TikTok</a></li>
-          <li><a href="#" class="hover:text-white transition">Instagram</a></li>
-          <li><a href="#" class="hover:text-white transition">LinkedIn</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="mt-8 text-center text-xs text-slate-500">© <span id="year"></span> Lightning Ads Ltd. All rights reserved.</div>
-  </footer>
-
-  <script>
-    // Update copyright year automatically
-    document.getElementById("year").textContent = new Date().getFullYear();
-
-    const fileInput   = document.getElementById('fileInput');
-    const previewGrid = document.getElementById('previewGrid');
-    const openFormBtn = document.getElementById('openForm');
-
-    const images = []; // {origDataUri, finalDataUri}
-
-    const isRatioOK = (w, h) => {
-      const r = w / h;
-      return r >= 0.5 && r <= 2;
-    };
-
-    fileInput.addEventListener('change', async (e) => {
-      [...e.target.files].slice(0, 5 - images.length).forEach(file => handleFile(file));
-      fileInput.value = '';
-    });
-
-    const handleFile = (file) => {
-      const reader = new FileReader();
-      reader.onload = (evt) => {
-        const origUri = evt.target.result;
-        const img     = new Image();
-        img.onload = () => {
-          const {width: w, height: h} = img;
-          const ok = isRatioOK(w, h);
-          const wrapper = document.createElement('div');
-          wrapper.className = 'relative group';
-          wrapper.innerHTML = `
-            <img src="${origUri}" class="w-full rounded-xl shadow-sm" />
-            <div class="absolute inset-2 flex flex-col items-end space-y-2 opacity-0 group-hover:opacity-100 transition">
-              <button class="cropBtn bg-white/80 backdrop-blur px-2 py-1 text-xs rounded shadow">${ok ? 'Re‑Crop' : 'Crop to Fit'}</button>
-              <button class="dlBtn bg-white/80 backdrop-blur px-2 py-1 text-xs rounded shadow">Download</button>
-            </div>
-            <p class="mt-2 text-center text-sm ${ok ? 'text-green-600' : 'text-red-600'}">${(w/h).toFixed(2)}</p>
-          `;
-          previewGrid.appendChild(wrapper);
-
-          let finalUri = origUri;
-          const crop = () => {
-            const canvas = document.createElement('canvas');
-            const desiredR = w/h < 0.5 ? 0.5 : 2;
-            let cw, ch, sx, sy;
-            if (w/h < desiredR) { // too tall → crop height
-              cw = w; ch = w/desiredR; sx = 0; sy = (h-ch)/2;
-            } else {              // too wide → crop width
-              ch = h; cw = h*desiredR; sy = 0; sx = (w-cw)/2;
-            }
-            canvas.width  = cw;
-            canvas.height = ch;
-            const ctx = canvas.getContext('2d');
-            ctx.drawImage(img, sx, sy, cw, ch, 0, 0, cw, ch);
-            finalUri = canvas.toDataURL('image/jpeg');
-            wrapper.querySelector('img').src = finalUri;
-            wrapper.querySelector('p').textContent = (cw/ch).toFixed(2);
-            wrapper.querySelector('p').className = 'mt-2 text-center text-sm text-green-600';
-          };
-
-          if (!ok) crop();
-
-          wrapper.querySelector('.cropBtn').addEventListener('click', crop);
-          wrapper.querySelector('.dlBtn').addEventListener('click', () => {
-            const a = document.createElement('a');
-            a.href = finalUri;
-            a.download = 'cropped.jpg';
-            a.click();
-          });
-
-          images.push(() => finalUri);
-          if (images.length) openFormBtn.removeAttribute('disabled');
-          if (images.length === 5) fileInput.disabled = true;
-        };
-        img.src = origUri;
-      };
-      reader.readAsDataURL(file);
-    };
-
-    // Open Tally with hidden fields
-    openFormBtn.addEventListener('click', () => {
-      const answers = {};
-      images.forEach((fn, idx) => answers[`image${idx+1}`] = fn());
-      Tally.openPopup(
-        'https://tally.so/r/ABC123?hideTitle=1&transparentBackground=1',
-        {
-          alignLeft: false,
-          width: 650,
-          answers
-        }
-      );
-    });
-  </script>
-</body>
+    <script>
+      // Update copyright year automatically
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
+  </body>
 </html>
